<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LogInActivity">

        <EditText
            android:id="@+id/userTextID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

        <EditText
            android:id="@+id/passTextID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/userTextID"
            app:layout_constraintStart_toStartOf="@+id/userTextID"
            app:layout_constraintTop_toBottomOf="@+id/userTextID" />

        <Button
            android:id="@+id/registationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/registation"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:background="@android:drawable/button_onoff_indicator_off"
            app:layout_constraintEnd_toEndOf="@+id/passTextID"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="@+id/passTextID"
            app:layout_constraintTop_toBottomOf="@+id/passTextID" />

        <Button
            android:id="@+id/logInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@android:drawable/button_onoff_indicator_off"
            app:layout_constraintBottom_toBottomOf="@+id/registationBtn"
            app:layout_constraintEnd_toEndOf="@+id/passTextID"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toEndOf="@+id/registationBtn"
            app:layout_constraintTop_toTopOf="@+id/registationBtn"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiezztext"
            android:textColor="#2196F3"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin"
            android:textColor="#000"
            android:textStyle="italic"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>